@@ -7,7 +7,7 @@ use DBICTest;
 
 my $schema = DBICTest->init_schema();
 
-plan tests => 62;
+plan tests => 63;
 
 # figure out if we've got a version of sqlite that is older than 3.2.6, in
 # which case COUNT(DISTINCT()) doesn't work
@@ -289,5 +289,6 @@ ok(!$@, "stringify to false value doesn't cause error");
   is_deeply([$schema->source('CD')->columns], [qw/cdid artist title year/]);
   $schema->source('CD')->remove_columns('year');
   is_deeply([$schema->source('CD')->columns], [qw/cdid artist title/]);
+  ok(! exists $schema->source('CD')->_columns->{'year'}, 'year still exists in _columns');
 }
 
