@@ -1,5 +1,7 @@
 Revision history for DBIx::Class
 
+        - remove_columns now deletes columns from _columns
+
 0.07001 2006-08-18 19:55:00
         - add directory argument to deploy()
         - support default aliases in many_to_many accessors.
